добавлены внешние сслыки но вставляются некорректно со служебными

--- a/public/index.html
+++ b/public/index.html
@@ -38,6 +38,7 @@
                         <button id="new-child" class="note-only">+ Дочерняя заметка</button>
                         <button id="preview-btn">Предпросмотр</button>
                         <button id="insert-link-btn">🔗 Вставить ссылку</button>
+                        <button id="insert-external-link-btn">🌐 Внешняя ссылка</button>
                         <button id="insert-quote-btn">❝ Цитата</button>
                         <button id="insert-highlight-btn">🎨 Выделить</button>
                     </div>
@@ -45,7 +46,7 @@
             </div>
         </main>
         <footer>
-            Версия приложения: v0.4.1
+            Версия приложения: v0.5.0
         </footer>
     </div>
 
@@ -96,6 +97,23 @@
         </div>
         <select id="link-select" size="10" style="width:100%; margin-bottom:1rem;"></select>
         <button id="insert-link-confirm">Вставить ссылку</button>
+    </div>
+</div>
+
+<!-- Модальное окно для внешней ссылки -->
+<div id="external-link-modal" class="modal" style="display: none;">
+    <div class="modal-content">
+        <span class="close-external-link">&times;</span>
+        <h3>Вставить внешнюю ссылку</h3>
+        <div class="form-group">
+            <label for="external-link-text">Текст ссылки:</label>
+            <input type="text" id="external-link-text" placeholder="например: Google">
+        </div>
+        <div class="form-group">
+            <label for="external-link-url">URL:</label>
+            <input type="url" id="external-link-url" placeholder="https://example.com">
+        </div>
+        <button id="insert-external-link-confirm">Вставить</button>
     </div>
 </div>
 
