встроен поиск по заголовкам

--- a/public/index.html
+++ b/public/index.html
@@ -13,9 +13,13 @@
         </header>
         <main class="main">
             <div class="tree-panel">
+                 <div class="search-container">
+                     <input type="text" id="search-input" placeholder="🔍 Поиск по заголовкам...">
+                </div>
                 <h2>Библиография</h2>
                 <div id="bib-container">
                     <!-- Список библиографических заметок -->
+                    
                 </div>
                 <h2>Заметки</h2>
                 <button id="new-note-root">+ Новая заметка верхнего уровня</button>
@@ -46,7 +50,7 @@
             </div>
         </main>
         <footer>
-            Версия приложения: v0.5.0
+            Версия приложения: v0.6.0
         </footer>
     </div>
 
